tests/fixtures/positive/compose/ComposeModifierFillAfterSize.kt
package test
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.size
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.unit.dp

@Composable
fun Example() {
    Box(Modifier.size(48.dp).fillMaxWidth())
}
